Update UserComputeServiceImpl.java